--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.1-RELEASE</version>
+	<version>2.0.8-SNAPSHOT</version>
 	
 	<name>maven-web-application</name>
 
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>ACADA Learning Releases Nexus Repository</name>
-	      <url>http://172.31.94.25:8081/repository/UBA-release/</url>
+	      <url>http://34.213.49.58:5050/repository/Cenovus-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>ACADA Learning Snapshot Nexus Repository </name>
-	      <url>http://172.31.94.25:8081/repository/UBA-Snapshot/</url>
+	      <url>http://34.213.49.58:5050/repository/Cenovus-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
