--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.mt</groupId>
 	<artifactId>maven-web-application</artifactId>
 	<packaging>war</packaging>
-	<version>2.0.8-SNAPSHOT</version>
+	<version>2.0.8-RELEASE</version>
 	
 	<name>maven-web-application</name>
 
@@ -21,7 +21,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>http://54.244.216.138:5050/</sonar.host.url>
+		<sonar.host.url>http://54.218.105.109:5050/</sonar.host.url>
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -97,13 +97,13 @@
 	    <repository>
 	      <id>nexus</id>
 	      <name>ACADA Learning Releases Nexus Repository</name>
-	      <url>http://34.213.49.58:5050/repository/Cenovus-release/</url>
+	      <url>http://34.217.135.23:5050/repository/shnier-snapshot/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
 	      <name>ACADA Learning Snapshot Nexus Repository </name>
-	      <url>http://34.213.49.58:5050/repository/Cenovus-snapshot/</url>
+	      <url>http://34.217.135.23:5050/repository/shnier-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
